2.3/serviceconf.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    app: nginx-plus-multitool
  ports:
  - name: nginx
    protocol: TCP
    port: 9001
    targetPort: 80
  - name: multitool
    protocol: TCP
    port: 9002
    targetPort: 8080
